add testing parts for special bin request